@@ -24,12 +24,13 @@ What we wrote:
 What others wrote:
 
 
+    <img src="@IMAGES@lj-cover140.png" align="right" alt="linux journal cover">
+    <!-- not yet electronically available, but mention to give users a chance
+	 to buy the magazine at news stand !-->
+    
 <dl>
   <dt>December 2005</dt>
   <dd>
-    <!-- Not yet electronically available, but mention to give users a chance
-	 to buy the magazine at news stand !-->
-    
     Linux Journal publishes an article on
     <a href="http://www.linuxjournal.com/article/8583"><em>Stunning
     [Schenker] Graphics with GNU LilyPond</em></a>, as it is
