@@ -1,6 +1,7 @@
 2005-12-15  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/about/pubs.html: Mention linuxjournal.com article.
+	Add cover picture.
 
 2005-12-14  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
 
